# huffman

./: .gitignore  CMakeLists.txt  README.md  huffman  makefile  project.yml  shortTest.txt  testFile1.txt
cmakeModules/: CheckFlagListAndOutputString.cmake
src/: SDL.h  benSDL.c  benSDL.h  display.c  display.h  drawTree.c  drawTree.h  huffman.c  huffman.h  huffman.h.gch  list.c  list.h  main.c  main.h  memory.c  memory.h  memory.h.gch  printTree.c  printTree.h  queue.c  queue.h  test_list.c  types.h  utilities.c  utilities.h
src/core/: benSDL.c  benSDL.h  drawTree.c  drawTree.h  huffman.c  huffman.h  list.c  memory.c  neillsdl2.h  printTree.c  printTree.h  queue.c  queue.h  types.h  utilities.c
test/: .test_huffman.c.swp  dummyList.c  dummyList.h  dummyTree.c  test_SDL.c  test_benSDL.c  test_display.c  test_drawTree.c  test_huffman.c  test_list.c  test_memory.c  test_printTree.c  test_queue.c
testResources/: neilTest.txt  test2.txt
tests/: test_drawTree.cpp  test_huffman.cpp  test_list.cpp  test_memory.cpp  test_printTree.cpp  test_queue.cpp
tests/shared/: dummyList.h  dummyTree.h
